Fix the "stuck" of login-box under mobile layout

--- a/app/assets/stylesheets/layout/home.css.scss
+++ b/app/assets/stylesheets/layout/home.css.scss
@@ -70,6 +70,9 @@ $room_time_height: 20px;
 
 #login-link {
   font-size: 16px;
+  @media (min-width: 768px) {
+    float: right;
+  }
 }
 
 #sidebar {
